--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -71,7 +71,7 @@
 	<video #videoElement width="100%" height="100%"></video>
 
 	<!-- take photo button with white border and white icon -->
-	<ion-button class="touch-button" fill="clear" id="touch-take-photo" (click)="takePhoto()" [disabled]="recording || saving">
+	<ion-button class="touch-button" fill="clear" id="touch-take-photo" (click)="takePhoto()" [disabled]="saving">
 		<ion-icon name="camera-outline" style="color:white"></ion-icon>
 	</ion-button>
 	<!-- start recording & stop recording buttons -->
