--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -116,3 +116,16 @@ ion-toolbar ion-button:hover {
 ion-toolbar ion-button:hover {
 	opacity: 0.6;
 }
+
+video {
+	min-width: 100%;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: auto;
+    height: auto;
+}
+
+ion-toolbar {
+    --background: rgba(var(--ion-color-primary-contrast-rgb), 0.7);
+}
