Title and toolbar tweaks

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -2,7 +2,7 @@
 	<ion-toolbar>
 		<ion-title>
 			<img src="assets/icon/favicon.png" style="height:26px; position: absolute; top: 0px" />
-			<span style="margin-left: 34px">{{appEnvironment.productName}}</span>
+			<span class="product-name">{{appEnvironment.productName}}</span>
 		</ion-title>
 		<ion-buttons slot="start">
 		</ion-buttons>
