--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
 	<ion-toolbar>
 		<ion-title>
-			<img src="assets/icon/favicon.png" style="height:26px; position: absolute; top: 0px" />
+			<img src="assets/icon/icon.svg" />
 			<span class="product-name">{{appEnvironment.productName}}</span>
 		</ion-title>
 		<ion-buttons slot="start">
