Move home to pages directory; Move camera actions from home to camera service

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -30,6 +30,10 @@
 			<ion-button size="large" (click)="toggleFullscreen()" [disabled]="recording" title="Toggle fullscreen">
 				<ion-icon name="resize-outline"></ion-icon>
 			</ion-button>
+
+			<!-- <ion-button size="large" (click)="downloadsPopover()" [disabled]="recording" title="Photos and Videos">
+				<ion-icon name="download-outline"></ion-icon>
+			</ion-button> -->
 			<ion-button id="menu-popover-button" [disabled]="recording" title="More...">
 				<ion-icon name="ellipsis-horizontal"></ion-icon>
 			</ion-button>
