Save files with Capacitor Filesystem

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -59,7 +59,7 @@
 								<ion-item [button]="true" [detail]="false" (click)="selectCamera()"><ion-label>Select camera</ion-label></ion-item>
 								<ion-item [button]="true" [detail]="false" (click)="selectMicrophone()"><ion-label>Select microphone</ion-label></ion-item>
 								<ion-item [button]="true" (click)="toggleMute()" [detail]="false"><ion-label>Toggle mute status</ion-label></ion-item>
-								<ion-item [button]="true" (click)="zoom = !zoom" [detail]="false"><ion-label>Toggle zoom</ion-label></ion-item>
+								<ion-item [button]="true" (click)="toggleZoom()" [detail]="false"><ion-label>Toggle zoom</ion-label></ion-item>
 							</ion-list>
 						</ion-content>
 					</ng-template>
