--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -36,8 +36,9 @@
 	right: 40px;
 	bottom: 20px;
 	background-color: rgba(0, 0, 0, 0.5);
-	padding: 4px 20px;
 	font-size: 18px;
+    min-height: 60px;
+    padding: 10px 20px;
 }
 
 .recording-time {
@@ -56,7 +57,7 @@
 	left: 40px;
 	bottom: 20px;
 	background-color: rgba(0, 0, 0, 0.5);
-	padding: 18px 4px;
+	padding: 0;
 	font-size: 18px;
 	min-height: 60px;
 	text-transform: initial;
