--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -86,13 +86,12 @@
 	<ion-button class="touch-button" fill="clear" id="touch-stop-recording" (click)="stopRecording()" *ngIf="recording" [disabled]="saving">
 		<ion-icon name="stop" style="color:white"></ion-icon>
 	</ion-button>
-	<img id="watermark" src="/assets/watermark.png" width="150" style="position: absolute; top: 80px; right: 10px; width: 150px; opacity: 0.5;" />
 
 	<!-- screen shot -->
 	<canvas id="canvas" style="display:none"></canvas>
 	<div class="output" style="display:none">
 		<img id="photo" alt="The screen capture will appear in this box." style="width: 1024px; height: 1024px;" />
-		<img id="watermark" src="/assets/watermark.png" width="150" style="position: absolute; top: 20px; right: 10px; width: 150px; opacity: 0.5;" />
+		<img id="watermark" src="/assets/watermark.png" width="155" height="28" style="opacity: 0; position: absolute; top: 20px; right: 10px; width: 155px; height: 28px;" />
 	</div>
 
 	<!-- session name -->
