--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -46,6 +46,7 @@
 			<ion-list>
 				<!-- todo: Open media folder -->
 				<ion-item [button]="true" (click)="isSessionAlertOpen=true" [detail]="false"><ion-label>Set session name</ion-label></ion-item>
+				<ion-item [button]="true" (click)="viewSessionFiles()" [detail]="false"><ion-label>View session files</ion-label></ion-item>
 				<ion-item [button]="true" id="settings-trigger" [detail]="true">Settings...</ion-item>
 				<ion-item [button]="true" (click)="isAboutOpen=true"><ion-label>About</ion-label></ion-item>
 				<!-- settings menu -->
