--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
 	<ion-toolbar>
 		<ion-title>
-			<img src="assets/icon/icon.svg" />
+			<!-- <img src="assets/icon/icon.svg" /> -->
 			<span class="product-name">{{appEnvironment.productName}}</span>
 		</ion-title>
 		<ion-buttons slot="start">
