--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -37,13 +37,13 @@
 	bottom: 20px;
 	background-color: rgba(0, 0, 0, 0.5);
 	font-size: 18px;
-    min-height: 64px;
-    padding: 10px 20px;
+	min-height: 64px;
+	padding: 10px 20px;
 }
 
 .recording-time {
-    font-size: 18px;
-    color: var(--ion-color-dark); 
+	font-size: 18px;
+	color: var(--ion-color-dark);
 }
 
 :host ::ng-deep ion-select {
@@ -88,7 +88,7 @@ ion-toolbar ion-button:hover {
 	position: absolute;
 	right: 40px;
 	padding: 18px 4px;
-    min-height: 40px;
+	min-height: 40px;
 	text-transform: initial;
 	width: 75px;
 	height: 75px;
@@ -153,5 +153,27 @@ ion-title {
 	#touch-start-recording,
 	#touch-stop-recording {
 		display: none;
+	}
+}
+
+.flash {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: white;
+	opacity: 0;
+	z-index: 9999;
+	pointer-events: none;
+	animation: flash-animation 0.5s ease-out;
+}
+
+@keyframes flash-animation {
+	0% {
+		opacity: 0.5;
+	}
+	100% {
+		opacity: 0;
 	}
 }
